# highlight-manager

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  init_db.py  pyproject.toml
app/: auth.py  config.py  database.py  main.py  models.py
app/templates/: base.html  collection_detail.html  collections.html  detail.html  home.html  login.html  register.html  reminders.html  search.html  settings.html  source_detail.html  sources.html
app/templates/partials/: collection_item.html  devices_table.html  highlight_card.html  highlight_edit.html  highlight_item.html  highlight_notes.html  highlights_list.html  note_edit.html  note_item.html  reminders_panel.html  search_results.html  source_notes.html  tag_modal.html
browser-extension/: manifest.json  options.html  options.js  popup.css  popup.html  popup.js
scripts/: send_ntfy_reminders.py
